--- a/index.html
+++ b/index.html
@@ -163,61 +163,55 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 11.10.2025</b>
-        <p>7:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>7:15:</p>
+        <b>Расписание на 12.10.2025</b>
+        <p>10:02:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>7:35:</p>
+        <p>10:20:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 8:00:</p>
+        <p>С 10:45:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>9:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:00:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>10:25:</p>
+        <p>12:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 10:40:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
+        <p>12:10:</p>
+        <p>- К/Ф "Скейт"</p>
         <p>12:25:</p>
-        <p>- Семейная связь</p>
-        <p>13:15:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>15:15:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>15:40:</p>
+        <p>12:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:00:</p>
+        <p>13:05:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>16:20:</p>
-        <p>- Дом забытых вещей</p>
-        <p>16:35:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 17:00:</p>
-        <p>Продолжение вещания</p>
-        <p>19:10:</p>
-        <p>- Дом забытых вещей</p>
-        <p>20:50:</p>
-        <p>- К/ф "Беседа"</p>
-        <p>21:36:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:15:</p>
+        <p>С 13:30:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 22:30:</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>16:00:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>16:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>18:40:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>19:00:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>19:20:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>19:45:</p>
+        <p>- Реальность полёта <mark>ПО ВОСКРЕСЕНЬЯМ</mark></p>
+        <p>20:30:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 20:50:</p>
         <p>Продолжение вещания</p>
+        <p>21:45:</p>
+        <p>- Дом забытых вещей</p>
+        <p>22:20:</p>
+        <p>- К/ф "Семейная связь"</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
