--- a/livetv.html
+++ b/livetv.html
@@ -158,8 +158,58 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 16.10.2025</b>
-        <p>10:00:</p>
+        <b>Расписание на 17.10.2025</b>
+        <p>8:00:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>8:02:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>С 8:20:</p>
+        <p>- К/Ф Чудеса случаются</p>
+        <p>- К/Ф Страйдер (18+)</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
+        <p>9:45:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>10:10:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>10:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>10:35:</p>
+        <p>- К/Ф Карачун</p>
+        <p>11:15:</p>
+        <p>Продолжение вещания</p>
+        <p>11:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>12:40:</p>
+        <p>- Чудеса случаются</p>
+        <p>14:25:</p>
+        <p>- Страйдер (18+)</p>
+        <p>14:35:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>14:45:</p>
+        <p>- Семейная связь</p>
+        <p>16:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>16:55:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>17:30:</p>
+        <p>Продолжение вещания</p>
+        <p>18:35:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>19:30:</p>
+        <p>- Страйдер (18+)</p>
+        <p>19:40:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>20:50:</p>
+        <p>Там, где горы встречаются с морем <mark>ПО ПЯТНИЦАМ</mark></p>
+        <p>21:30:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:05:</p>
+        <p>- Дом забытых вещей</p>
+        <p>22:15:</p>
+        <p>Продолжение вещания</p>
+        <!-- <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
@@ -207,7 +257,7 @@ window.onclick = function(event) {
         <p>- Дом забытых вещей</p>
         <p>23:50:</p>
         <p>- К/ф "Беседа"</p>
-<!--         <b>Расписание на 08.10.2025</b> 
+        <b>Расписание на 08.10.2025</b> 
         <p>00:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>00:55:</p>
