--- a/index.html
+++ b/index.html
@@ -163,29 +163,14 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 24.10.2025</b>
-        <p>7:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>7:15:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>7:35:</p>
-        <p>- К/ф Черепаха</p>
-        <p>С 8:00:</p>
-        <p>- Фильм Чудеса случаются</p>
-        <p>- К/Ф Страйдер</p>
-        <p>- К/Ф Семейная связь</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>- К/Ф Беседа</p>
-        <p>- К/Ф Скейт</p>
-        <p>9:25:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>9:45:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <b>Расписание на 26.10.2025</b>
         <p>10:00:</p>
-        <p>- К/Ф Карачун</p>
-        <p>10:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 10:40:</p>
+        <p>10:15:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>10:35:</p>
+        <p>- К/ф Черепаха</p>
+        <p>С 11:00:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>- К/Ф Страйдер</p>
         <p>- К/Ф Семейная связь</p>
@@ -193,33 +178,45 @@ window.onclick = function(event) {
         <p>- К/Ф Беседа</p>
         <p>- К/Ф Скейт</p>
         <p>12:25:</p>
-        <p>- Семейная связь</p>
-        <p>13:15:</p>
-        <p>- К/ф Черепаха</p>
-        <p>15:15:</p>
         <p>- К/Ф ЭГО</p>
-        <p>15:40:</p>
+        <p>12:45:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:00:</p>
+        <p>13:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>16:20:</p>
+        <p>13:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>16:35:</p>
+        <p>С 13:40:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
+        <p>15:25:</p>
+        <p>- Семейная связь</p>
+        <p>16:15:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 17:00:</p>
-        <p>Продолжение вещания</p>
-        <p>19:10:</p>
-        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
-        <p>19:45:</p>
-        <p>- Дом забытых вещей</p>
-        <p>21:00:</p>
-        <p>- К/ф Беседа</p>
-        <p>22:00:</p>
+        <p>18:15:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>18:40:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:15:</p>
-        <p>- Короткометражный фильм Семейная связь</p>
-        <p>С 22:30:</p>
+        <p>19:00:</p>
+        <p>- К/Ф Карачун</p>
+        <p>19:20:</p>
+        <p>- Дом забытых вещей</p>
+        <p>19:35:</p>
+        <p>- К/ф Черепаха</p>
+        <p>С 20:00:</p>
         <p>Продолжение вещания</p>
+        <p>22:10:</p>
+        <p>- Там, где море встречается с морем</p>
+        <p>22:45:</p>
+        <p>- Дом забытых вещей</p>
+        <b>Расписание на 27.10.2025</b>
+        <p>00:00:</p>
+        <p>- К/ф Беседа</p>
+        <p>00:15:</p>
+        <p>Перерыв вещания</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
