--- a/index.html
+++ b/index.html
@@ -163,7 +163,13 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 01.11.2025</b>
+        <b>Расписание на 02.11.2025</b>
+        <p>7:00:</p>
+        <p>- Дом забытых вещей</p>
+        <p>7:15:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>7:35:</p>
+        <p>- К/ф Черепаха</p>
         <p>С 8:00:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>- К/Ф Страйдер</p>
