--- a/livetv.html
+++ b/livetv.html
@@ -158,7 +158,13 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 01.11.2025</b>
+        <b>Расписание на 02.11.2025</b>
+        <p>7:00:</p>
+        <p>- Дом забытых вещей</p>
+        <p>7:15:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>7:35:</p>
+        <p>- К/ф Черепаха</p>
         <p>С 8:00:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>- К/Ф Страйдер</p>
