--- a/livetv.html
+++ b/livetv.html
@@ -158,51 +158,57 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 04.11.2025</b>
-        <p>С 10:00:</p>
-        <p>- Фильм Чудеса случаются</p>
-        <p>- К/Ф Страйдер</p>
-        <p>- К/Ф Семейная связь</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>- К/Ф Беседа</p>
-        <p>- К/Ф Скейт</p>
-        <p>11:25:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>11:45:</p>
+        <b>Расписание на 05.11.2025</b>
+        <p>8:00:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>8:02:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:00:</p>
-        <p>- К/Ф Карачун</p>
-        <p>12:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>С 12:40:</p>
+        <p>С 8:20:</p>
         <p>- Фильм Чудеса случаются</p>
-        <p>- К/Ф Страйдер</p>
-        <p>- К/Ф Семейная связь</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>- К/Ф Беседа</p>
-        <p>- К/Ф Скейт</p>
-        <p>14:25:</p>
-        <p>- Семейная связь</p>
-        <p>15:15:</p>
-        <p>- К/ф Черепаха</p>
-        <p>17:15:</p>
+        <p>- Короткометражный фильм Страйдер (18+)</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм Беседа</p>
+        <p>- Короткометражный фильм Скейт</p>
+        <p>9:45:</p>
         <p>- К/Ф ЭГО</p>
-        <p>17:40:</p>
+        <p>10:10:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:00:</p>
-        <p>- К/Ф Карачун</p>
-        <p>18:20:</p>
+        <p>10:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>18:35:</p>
-        <p>- К/ф Черепаха</p>
-        <p>С 19:00:</p>
+        <p>10:35:</p>
+        <p>- К/Ф Карачун</p>
+        <p>11:15:</p>
         <p>Продолжение вещания</p>
-        <p>21:10:</p>
+        <p>11:40:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:50:</p>
-        <p>- К/ф Беседа</p>
-        <p>23:36:</p>
+        <p>12:40:</p>
+        <p>- Чудеса случаются</p>
+        <p>14:25:</p>
+        <p>- Страйдер (18+)</p>
+        <p>14:35:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>14:45:</p>
+        <p>- Семейная связь</p>
+        <p>16:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>16:55:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>17:30:</p>
+        <p>Продолжение вещания</p>
+        <p>18:35:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>19:30:</p>
+        <p>- Страйдер (18+)</p>
+        <p>19:40:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>20:50:</p>
+        <p>Там, где горы встречаются с морем</p>
+        <p>21:30:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:05:</p>
+        <p>- Дом забытых вещей</p>
+        <p>22:15:</p>
+        <p>Продолжение вещания</p>
         <!-- <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
