--- a/index.html
+++ b/index.html
@@ -163,54 +163,62 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 07.11.2025</b>
-        <p>8:00:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20:</p>
+        <b>Расписание на 08.11.2025</b>
+        <p>6:00:</p>
+        <p>- Дом забытых вещей</p>
+        <p>6:15:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>6:35:</p>
+        <p>- К/ф Черепаха</p>
+        <p>С 7:00:</p>
         <p>- Фильм Чудеса случаются</p>
-        <p>- Короткометражный фильм Страйдер (18+)</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм Беседа</p>
-        <p>- Короткометражный фильм Скейт</p>
-        <p>9:45:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>10:10:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>10:35:</p>
-        <p>- К/Ф Карачун</p>
-        <p>11:15:</p>
-        <p>Продолжение вещания</p>
-        <p>11:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>12:40:</p>
-        <p>- Чудеса случаются</p>
-        <p>14:25:</p>
-        <p>- Страйдер (18+)</p>
-        <p>14:35:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>14:45:</p>
-        <p>- Семейная связь</p>
-        <p>16:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>16:55:</p>
-        <p>- Там, где горы встречаются с морем <mark>ПО ПЯТНИЦАМ</mark></p>
-        <p>17:30:</p>
-        <p>Продолжение вещания</p>
-        <p>18:35:</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
         <p>- Импульс - шаг в будущее</p>
-        <p>19:30:</p>
-        <p>- Страйдер (18+)</p>
-        <p>19:40:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>20:50:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>21:30:</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
+        <p>8:25:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>8:45:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:05:</p>
+        <p>9:00:</p>
+        <p>- К/Ф Карачун</p>
+        <p>9:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:15:</p>
+        <p>С 9:40:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
+        <p>11:25:</p>
+        <p>- Семейная связь</p>
+        <p>12:15:</p>
+        <p>- К/ф Черепаха</p>
+        <p>14:15:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>14:40:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>15:00:</p>
+        <p>- К/Ф Карачун</p>
+        <p>15:20:</p>
+        <p>- Дом забытых вещей</p>
+        <p>15:35:</p>
+        <p>- К/ф Черепаха</p>
+        <p>С 16:00:</p>
+        <p>Продолжение вещания</p>
+        <p>18:10:</p>
+        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
+        <p>18:45:</p>
+        <p>- Дом забытых вещей</p>
+        <p>20:00:</p>
+        <p>- К/ф Беседа</p>
+        <p>21:00:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>21:15:</p>
+        <p>- Короткометражный фильм Семейная связь</p>
+        <p>С 21:30:</p>
         <p>Продолжение вещания</p>
 
 
