--- a/livetv.html
+++ b/livetv.html
@@ -158,63 +158,53 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 08.11.2025</b>
-        <p>6:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>6:15:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>6:35:</p>
+        <b>Расписание на 09.11.2025</b>
+        <p>10:20:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 7:00:</p>
+        <p>С 10:45:</p>
         <p>- Фильм Чудеса случаются</p>
-        <p>- К/Ф Страйдер</p>
-        <p>- К/Ф Семейная связь</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>- К/Ф Беседа</p>
-        <p>- К/Ф Скейт</p>
-        <p>8:25:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>8:45:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:00:</p>
-        <p>- К/Ф Карачун</p>
-        <p>9:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>С 9:40:</p>
-        <p>- Фильм Чудеса случаются</p>
-        <p>- К/Ф Страйдер</p>
-        <p>- К/Ф Семейная связь</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>- К/Ф Беседа</p>
-        <p>- К/Ф Скейт</p>
-        <p>11:25:</p>
-        <p>- Семейная связь</p>
-        <p>12:15:</p>
-        <p>- К/ф Черепаха</p>
-        <p>14:15:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>14:40:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>15:00:</p>
-        <p>- К/Ф Карачун</p>
-        <p>15:20:</p>
-        <p>- Дом забытых вещей</p>
-        <p>15:35:</p>
-        <p>- К/ф Черепаха</p>
-        <p>С 16:00:</p>
-        <p>Продолжение вещания</p>
-        <p>18:10:</p>
-        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
-        <p>18:45:</p>
-        <p>- Дом забытых вещей</p>
-        <p>20:00:</p>
-        <p>- К/ф Беседа</p>
-        <p>21:00:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>21:15:</p>
+        <p>- Короткометражный фильм Страйдер</p>
         <p>- Короткометражный фильм Семейная связь</p>
-        <p>С 21:30:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- Короткометражный фильм Беседа</p>
+        <p>- Короткометражный фильм Скейт</p>
+        <p>12:00:</p>
+        <p>- Дом забытых вещей</p>
+        <p>12:10:</p>
+        <p>- К/Ф Скейт</p>
+        <p>12:25:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>12:45:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>13:05:</p>
+        <p>- К/Ф Карачун</p>
+        <p>С 13:30:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- Короткометражный фильм Страйдер</p>
+        <p>- Короткометражный фильм Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- Короткометражный фильм Беседа</p>
+        <p>- Короткометражный фильм Скейт</p>
+        <p>16:00:</p>
+        <p>- К/ф Черепаха</p>
+        <p>16:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>18:40:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>19:00:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>19:20:</p>
+        <p>- К/Ф Карачун</p>
+        <p>19:45:</p>
+        <p>- Реальность полёта <mark>ПО ВОСКРЕСЕНЬЯМ</mark></p>
+        <p>20:30:</p>
+        <p>- К/ф Черепаха</p>
+        <p>С 20:50:</p>
         <p>Продолжение вещания</p>
+        <p>21:45:</p>
+        <p>- Дом забытых вещей</p>
+        <p>22:20:</p>
+        <p>- К/ф Семейная связь</p>
         <!-- <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
