--- a/index.html
+++ b/index.html
@@ -164,45 +164,42 @@ window.onclick = function(event) {
 </div>
 <div class="title1">
         <b>Расписание на 09.11.2025</b>
-        <p>10:20:</p>
-        <p>- К/ф Черепаха</p>
-        <p>12:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>12:10:</p>
-        <p>- К/Ф Скейт</p>
-        <p>12:25:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>12:45:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:05:</p>
-        <p>- К/Ф Карачун</p>
-        <p>С 13:30:</p>
-        <p>- Фильм Чудеса случаются</p>
-        <p>- Короткометражный фильм Страйдер</p>
-        <p>- Короткометражный фильм Семейная связь</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>- Короткометражный фильм Беседа</p>
-        <p>- Короткометражный фильм Скейт</p>
-        <p>16:00:</p>
-        <p>- К/ф Черепаха</p>
-        <p>16:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>18:40:</p>
+        <p>11:45:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>19:00:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:20:</p>
-        <p>- К/Ф Карачун</p>
-        <p>19:45:</p>
-        <p>- Реальность полёта <mark>ПО ВОСКРЕСЕНЬЯМ</mark></p>
-        <p>20:30:</p>
-        <p>- К/ф Черепаха</p>
-        <p>С 20:50:</p>
-        <p>Продолжение вещания</p>
-        <p>21:45:</p>
+        <p>12:10:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>12:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:20:</p>
-        <p>- К/ф Семейная связь</p>
+        <p>12:35:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>13:15:</p>
+        <p>Продолжение вещания</p>
+        <p>13:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>14:40:</p>
+        <p>- Чудеса случаются</p>
+        <p>15:25:</p>
+        <p>- Страйдер (18+)</p>
+        <p>15:35:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>15:45:</p>
+        <p>- Семейная связь</p>
+        <p>18:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>18:55:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>19:30:</p>
+        <p>Продолжение вещания</p>
+        <p>20:35:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>21:30:</p>
+        <p>- Страйдер (18+)</p>
+        <p>21:40:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>22:50:</p>
+        <p>Там, где горы встречаются с морем</p>
+        <p>23:30:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
