--- a/livetv.html
+++ b/livetv.html
@@ -158,43 +158,55 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 09.11.2025</b>
-        <p>11:45:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>12:10:</p>
+        <b>Расписание на 10.11.2025</b>
+        <p>10:00:</p>
+        <p>- Дом забытых вещей</p>
+        <p>10:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>12:35:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>13:15:</p>
-        <p>Продолжение вещания</p>
-        <p>13:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>14:40:</p>
-        <p>- Чудеса случаются</p>
-        <p>15:25:</p>
-        <p>- Страйдер (18+)</p>
-        <p>15:35:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>15:45:</p>
-        <p>- Семейная связь</p>
-        <p>18:40:</p>
-        <p>- Дом забытых вещей</p>
-        <p>18:55:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>19:30:</p>
-        <p>Продолжение вещания</p>
-        <p>20:35:</p>
+        <p>10:35:</p>
+        <p>- К/ф Черепаха</p>
+        <p>С 11:00:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
         <p>- Импульс - шаг в будущее</p>
-        <p>21:30:</p>
-        <p>- Страйдер (18+)</p>
-        <p>21:40:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>22:50:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>23:30:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
+        <p>12:25:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>12:45:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>13:00:</p>
+        <p>- К/Ф Карачун</p>
+        <p>13:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>С 13:40:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
+        <p>15:25:</p>
+        <p>- Семейная связь</p>
+        <p>16:15:</p>
+        <p>- К/ф Черепаха</p>
+        <p>18:15:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>18:40:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>19:00:</p>
+        <p>- К/Ф Карачун</p>
+        <p>19:20:</p>
+        <p>- Дом забытых вещей</p>
+        <p>19:35:</p>
+        <p>- К/ф Черепаха</p>
+        <p>С 20:00:</p>
+        <p>Продолжение вещания</p>
+        <p>22:10:</p>
+        <p>- Дом забытых вещей</p>
+        <p>23:50:</p>
+        <p>- К/ф Беседа</p>
         <!-- <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
