--- a/livetv.html
+++ b/livetv.html
@@ -158,55 +158,58 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 12.11.2025</b>
-        <p>10:00:</p>
+        <b>Расписание на 14.11.2025</b>
+        <p>7:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>10:15:</p>
+        <p>7:15:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:35:</p>
+        <p>7:35:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 11:00:</p>
+        <p>С 8:00:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>- К/Ф Страйдер</p>
         <p>- К/Ф Семейная связь</p>
         <p>- Импульс - шаг в будущее</p>
         <p>- К/Ф Беседа</p>
         <p>- К/Ф Скейт</p>
+        <p>9:25:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>9:45:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>10:00:</p>
+        <p>- К/Ф Карачун</p>
+        <p>10:25:</p>
+        <p>- Дом забытых вещей</p>
         <p>12:25:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>12:45:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:00:</p>
-        <p>- К/Ф Карачун</p>
-        <p>13:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>С 13:40:</p>
-        <p>- Фильм Чудеса случаются</p>
-        <p>- К/Ф Страйдер</p>
-        <p>- К/Ф Семейная связь</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>- К/Ф Беседа</p>
-        <p>- К/Ф Скейт</p>
-        <p>15:25:</p>
         <p>- Семейная связь</p>
-        <p>16:15:</p>
+        <p>13:15:</p>
         <p>- К/ф Черепаха</p>
-        <p>18:15:</p>
+        <p>15:15:</p>
         <p>- К/Ф ЭГО</p>
-        <p>18:40:</p>
+        <p>15:40:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:00:</p>
+        <p>16:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>19:20:</p>
+        <p>16:20:</p>
         <p>- Дом забытых вещей</p>
-        <p>19:35:</p>
+        <p>16:35:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 20:00:</p>
-        <p>Продолжение вещания</p>
-        <p>22:10:</p>
+        <p>17:20:</p>
+        <p>-К/ф Страйдер (18+)</p>
+        <p>17:30:</p>
+        <p>-К/ф Страйдер 2 (18+)</p>
+        <p>19:20:</p>
+        <p>- Там, где море встречается с морем <mark>ПО ПЯТНИЦАМ</mark></p>
+        <p>19:55:</p>
         <p>- Дом забытых вещей</p>
-        <p>23:50:</p>
+        <p>21:10:</p>
         <p>- К/ф Беседа</p>
+        <p>22:10:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:25:</p>
+        <p>- Короткометражный фильм Семейная связь</p>
+        <p>С 22:40:</p>
+        <p>Продолжение вещания</p>
         <!-- <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
